@@ -3,20 +3,27 @@ package ru.hogwarts.school.service;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import ru.hogwarts.school.model.Faculty;
 import ru.hogwarts.school.model.Student;
+import ru.hogwarts.school.repository.FacultyRepository;
 import ru.hogwarts.school.repository.StudentRepository;
 
 import java.util.Collection;
+import java.util.Comparator;
+import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class StudentService {
     private final StudentRepository studentRepository;
+    private final FacultyRepository facultyRepository;
 
     Logger logger = LoggerFactory.getLogger(StudentService.class);
 
-    public StudentService(StudentRepository studentRepository) {
+    public StudentService(StudentRepository studentRepository, FacultyRepository facultyRepository) {
         this.studentRepository = studentRepository;
+        this.facultyRepository = facultyRepository;
     }
 
 
@@ -55,10 +62,54 @@ public class StudentService {
         return studentRepository.findStudentsByFaculty_Name(faculty);
     }
 
-    public Collection<Student> sortStudents() {
-        return studentRepository.findAll().stream()
-                .filter(student -> student.getName().startsWith("А"))
+    public Collection<String> sortStudents() {
+        return studentRepository.findAll()
+                .stream()
+                .map(Student::getName)
+                .map(String::toUpperCase)
+                .filter(s -> s.startsWith("A"))
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public Double avgAge() {
+        return studentRepository.findAll().stream()
+                .mapToDouble(Student::getAge)
+                .average()
+                .orElse(0);
+    }
+
+    public String getLongestNameFaculty() {
+        List<Faculty> facultyList = facultyRepository.findAll();
+        ;
+        return facultyList.stream()
+                .map(Faculty::getName)
+                .max(Comparator.comparingInt(String::length))
+                .orElse("No name");
+    }
+
+    public Integer task4() {
+        long start = System.currentTimeMillis();
+        int result = Stream
+                .iterate(1, a -> a + 1)
+                .limit(100_000_000)
+                .reduce(0, (a, b) -> a + b);
+        long finish = System.currentTimeMillis();
+
+        logger.info("result: {}, time: {}", result, finish - start);
+        return result;
+    }
+
+    public Integer task4Par() {
+        long start = System.currentTimeMillis();
+        int result = Stream
+                .iterate(1, a -> a + 1)
+                .limit(100_000_000)
+                .parallel()
+                .reduce(0, (a, b) -> a + b);
+        long finish = System.currentTimeMillis();
+
+        logger.info("result: {}, time: {}", result, finish - start);
+        return result;
     }
 }
